# ticket_api

./: .env.example  .gitignore  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_04_19_2121-f881ac469c55_.py  2025_04_20_0009-3ce7607d1ec0_.py  2025_04_20_0113-f34697d5fa14_.py  2025_04_20_0159-6a86a524354a_.py
src/justin_test_api/: api.py  config.py
src/justin_test_api/auth/: backend.py  dependencies.py  router.py  schemas.py
src/justin_test_api/db/: base.py
src/justin_test_api/tickets/: router.py  schemas.py
src/ticket_api/: api.py  cli.py  config.py  dependencies.py  models.py
src/ticket_api/auth/: dependencies.py  models.py  router.py  service.py
src/ticket_api/db/: base.py  repository.py
src/ticket_api/tickets/: ai.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/tickets/: conftest.py
tests/tickets/repository/: test_message_repository.py  test_ticket_repository.py  test_ticket_status_repository.py
tests/tickets/router/: test_ticket_router.py
tests/tickets/service/: test_ticket_service.py
